--- a/Uncrowded Prototype/map.html
+++ b/Uncrowded Prototype/map.html
@@ -25,8 +25,14 @@
 			</div>
 			<div class="location">
 				<div class="locationInfo">
-					<h1>Popp Martin Student Union</h1>
-					<h2>Location Type(s)</h2>
+					<h1>
+						<div class="locationButton">
+							<a href="location.html">
+									Popp Martin Student Union
+							</a>
+						</div>						
+					</h1>
+					<h2>Location Types</h2>
 					<ul id="loctypes">
 						<li>Restaurant</li>
 						<li>Study Spot</li>
@@ -42,6 +48,6 @@
 
 	<div class="Footer">  
 		<a href="index.html">Home</a> 
-		<a href="">Back</a>
+		<a href="index.html">Back</a>
 	</div>
 </html>
