Working heatmap and Google form for testing

--- a/Uncrowded Prototype/index.html
+++ b/Uncrowded Prototype/index.html
@@ -25,6 +25,11 @@
 							login
 						</div>
 					</a>
+					<a href="form.html">
+						<div class="fakeButton">
+							Google Form
+						</div>
+					</a>
 				</form>
 			  </div>
 			</div>
